--- a/.emacs.desktop
+++ b/.emacs.desktop
@@ -2,7 +2,7 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Sun Feb  1 21:13:02 2015
+;; Created Sun Feb  1 22:14:02 2015
 ;; Desktop file format version 206
 ;; Emacs version 24.4.1
 
@@ -11,33 +11,132 @@
 (setq desktop-missing-file-warning nil)
 (setq tags-file-name nil)
 (setq tags-table-list '("/home/wildn00b/OSDev/PowerNex/TAGS"))
-(setq search-ring '("multiboot_info" "multiboot"))
+(setq search-ring '("none" "multiboot_info" "multiboot"))
 (setq regexp-search-ring nil)
 (setq register-alist nil)
-(setq file-name-history '("~/OSDev/PowerNex/.gitignore" "~/OSDev/PowerNex/bochsout.txt" "~/OSDev/PowerNex/powernex/include/*" "~/OSDev/PowerNex/powernex/include/cpu/*" "~/OSDev/PowerNex/powernex/src/cpu/*" "~/OSDev/PowerNex/powernex/src/cpu/gdt_s.S" "~/OSDev/PowerNex/powernex/src/cpu/gdt.c" "~/OSDev/PowerNex/powernex/include/cpu/gdt.h" "~/OSDev/PowerNex/powernex/src/cpu" "~/OSDev/PowerNex/powernex/include/cpu" "~/OSDev/PowerNex-d/powernex/src/powernex/io/textmode.d" "~/OSDev/PowerNex/powernex/include/string.h" "~/OSDev/PowerNex/powernex/include/io/string.h" "~/OSDev/PowerNex/powernex/src/io/string.c" "~/OSDev/PowerNex-d/powernex/src/powernex/io/textmode.d" "~/OSDev/PowerNex/Makefile" "~/OSDev/PowerNex/bochsrc.txt" "~/OSDev/PowerNex/powernex/include/*" "~/OSDev/PowerNex/powernex/include/*/*" "~/OSDev/PowerNex/powernex/src/*/*" "~/OSDev/PowerNex/powernex/src/*" "~/OSDev/PowerNex/powernex/*" "~/OSDev/PowerNex/Makefile" "/home/wildn00b/OSDev/PowerNex"))
+(setq file-name-history '("~/OSDev/PowerNex/.gitignore" "~/OSDev/PowerNex/powernex/src/cpu/pit.c" "~/OSDev/PowerNex/powernex/include/cpu/pit.h" "~/OSDev/PowerNex/README.MD" "~/OSDev/PowerNex/README.md" "~/OSDev/PowerNex/.gitignore" "~/OSDev/PowerNex/bochsout.txt" "~/OSDev/PowerNex/powernex/include/*" "~/OSDev/PowerNex/powernex/include/cpu/*" "~/OSDev/PowerNex/powernex/src/cpu/*" "~/OSDev/PowerNex/powernex/src/cpu/gdt_s.S" "~/OSDev/PowerNex/powernex/src/cpu/gdt.c" "~/OSDev/PowerNex/powernex/include/cpu/gdt.h" "~/OSDev/PowerNex/powernex/src/cpu" "~/OSDev/PowerNex/powernex/include/cpu" "~/OSDev/PowerNex-d/powernex/src/powernex/io/textmode.d" "~/OSDev/PowerNex/powernex/include/string.h" "~/OSDev/PowerNex/powernex/include/io/string.h" "~/OSDev/PowerNex/powernex/src/io/string.c" "~/OSDev/PowerNex-d/powernex/src/powernex/io/textmode.d" "~/OSDev/PowerNex/Makefile" "~/OSDev/PowerNex/bochsrc.txt" "~/OSDev/PowerNex/powernex/include/*" "~/OSDev/PowerNex/powernex/include/*/*" "~/OSDev/PowerNex/powernex/src/*/*" "~/OSDev/PowerNex/powernex/src/*" "~/OSDev/PowerNex/powernex/*" "~/OSDev/PowerNex/Makefile" "/home/wildn00b/OSDev/PowerNex"))
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/.gitignore"
+  ".gitignore"
+  'fundamental-mode
+  '(yas-minor-mode linum-mode)
+  15
+  '(nil nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix)))
+
 (desktop-create-buffer 206
   "/home/wildn00b/OSDev/PowerNex/Makefile"
   "Makefile"
   'makefile-gmake-mode
   '(yas-minor-mode linum-mode)
-  1404
+  1120
   '(737 nil)
   nil
   nil
   '((indent-tabs-mode . t) (buffer-file-coding-system . undecided-unix)))
 
 (desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/.emacs-ide-project.cfg"
-  ".emacs-ide-project.cfg"
-  'emacs-ide-config-mode
+  "/home/wildn00b/OSDev/PowerNex/bochsrc.txt"
+  "bochsrc.txt"
+  'text-mode
   '(yas-minor-mode linum-mode)
-  2824
-  '(2131 nil)
+  1573
+  '(1751 nil)
   nil
   nil
-  '((show-trailing-whitespace) (buffer-file-coding-system . undecided-unix)))
+  '((buffer-file-coding-system . undecided-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/pit.c"
+  "pit.c"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  526
+  '(61 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/include/cpu/idt.h"
+  "idt.h"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  1302
+  '(1282 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/src/main.c"
+  "main.c"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  611
+  '(643 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/include/cpu/pit.h"
+  "pit.h"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  100
+  '(100 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/idt_s.S"
+  "idt_s.S"
+  'asm-mode
+  '(yas-minor-mode linum-mode)
+  1648
+  '(1796 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix) (overwrite-mode)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/idt.c"
+  "idt.c"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  4018
+  '(3058 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix) (overwrite-mode)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/powernex/include/cpu/gdt.h"
+  "gdt.h"
+  'c-mode
+  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  199
+  '(173 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (overwrite-mode)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/README.MD"
+  "README.MD"
+  'markdown-mode
+  '(yas-minor-mode linum-mode)
+  227
+  '(227 nil)
+  nil
+  nil
+  '((tab-width . 4) (buffer-file-coding-system . undecided-unix)))
 
 (desktop-create-buffer 206
   "/home/wildn00b/OSDev/PowerNex/powernex/include/multiboot.h"
@@ -62,28 +161,6 @@
   '((buffer-file-coding-system . utf-8-unix)))
 
 (desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/powernex/include/cpu/gdt.h"
-  "gdt.h"
-  'c-mode
-  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
-  199
-  '(173 nil)
-  nil
-  nil
-  '((buffer-file-coding-system . utf-8-unix) (overwrite-mode)))
-
-(desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/powernex/include/cpu/idt.h"
-  "idt.h"
-  'c-mode
-  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
-  1
-  '(nil nil)
-  nil
-  nil
-  '((buffer-file-coding-system . undecided-unix)))
-
-(desktop-create-buffer 206
   "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/gdt.c"
   "gdt.c"
   'c-mode
@@ -104,39 +181,6 @@
   nil
   nil
   '((buffer-file-coding-system . utf-8-unix)))
-
-(desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/idt.c"
-  "idt.c"
-  'c-mode
-  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
-  1
-  '(nil nil)
-  nil
-  nil
-  '((buffer-file-coding-system . undecided-unix)))
-
-(desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/powernex/src/cpu/idt_s.S"
-  "idt_s.S"
-  'asm-mode
-  '(yas-minor-mode linum-mode)
-  1
-  '(nil nil)
-  nil
-  nil
-  '((buffer-file-coding-system . undecided-unix)))
-
-(desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/powernex/src/main.c"
-  "main.c"
-  'c-mode
-  '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
-  520
-  '(281 nil)
-  nil
-  nil
-  '((buffer-file-coding-system . undecided-unix)))
 
 (desktop-create-buffer 206
   "/home/wildn00b/OSDev/PowerNex/powernex/src/io/textmode.c"
@@ -205,17 +249,6 @@
   '((buffer-file-coding-system . undecided-unix)))
 
 (desktop-create-buffer 206
-  "/home/wildn00b/OSDev/PowerNex/bochsrc.txt"
-  "bochsrc.txt"
-  'text-mode
-  '(yas-minor-mode linum-mode)
-  1
-  '(nil nil)
-  nil
-  nil
-  '((buffer-file-coding-system . undecided-unix)))
-
-(desktop-create-buffer 206
   "/home/wildn00b/OSDev/PowerNex/powernex/include/io/port.h"
   "port.h"
   'c-mode
@@ -231,6 +264,17 @@
   "port.c"
   'c-mode
   '(abbrev-mode auto-complete-mode yas-minor-mode linum-mode)
+  1
+  '(nil nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix)))
+
+(desktop-create-buffer 206
+  "/home/wildn00b/OSDev/PowerNex/.emacs-ide-project.cfg"
+  ".emacs-ide-project.cfg"
+  'emacs-ide-config-mode
+  '(yas-minor-mode linum-mode)
   1
   '(nil nil)
   nil
