--- a/.emacs-ide-project.cfg
+++ b/.emacs-ide-project.cfg
@@ -10,12 +10,12 @@ project_name = PowerNex
 
 # Init command is called before all 'compile' and 'run' commands.
 init_command = 
-compile_command_1 = make
-compile_command_2 = 
+compile_command_1 = make clean; make
+compile_command_2 = make
 compile_command_3 = 
 compile_command_4 = 
-run_command_1 = make run
-run_command_2 = 
+run_command_1 = make clean; make run
+run_command_2 = make run
 debug_command = make debug
 debug_program_1 = 
 debug_program_2 = 
