--- a/.emacs-ide-project.cfg
+++ b/.emacs-ide-project.cfg
@@ -16,7 +16,7 @@ compile_command_3 =
 compile_command_4 = 
 run_command_1 = make clean; make run
 run_command_2 = make run
-debug_command = make debug
+debug_command = 
 debug_program_1 = 
 debug_program_2 = 
 # In the compilation buffer, in the clickable filenames displayed when warnings or errors occur,
