Added font for future graphics mode.
Signed-off-by: Dan Printzell <xwildn00bx@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ cscope.files
 .emacs.desktop
 buildinfo.c
 includes/buildinfo.h
+utils/bdf2c
+powernex/include/text/font.h
+powernex/src/text/font.h
