Added BMP loader, and sample image rendering
Signed-off-by: Dan Printzell <xwildn00bx@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ powernex/src/text/font.h
 initrd.img
 mkinitrd
 win-bochs
+utils/logoconv
+powernex/include/text/logo.h
+powernex/include/text/cool.h
+Logo.bmp
+cool.bmp
