Added assets downloading and fixed logoconv and some makefile stuff
Signed-off-by: Dan Printzell <xwildn00bx@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-get install -qq aria2 parallel pv
 install:
   - ./utils/download-cc
+  - ./utils/download-assets
 
 script:
   - make
